adding secrets to workflow

--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -20,4 +20,7 @@ jobs:
           python-version-file: ".python-version"
 
       - name: "Post"
+        env:
+          BSKY_USERNAME: ${{ secrets.BSKY_USERNAME }}
+          BSKY_PASSWORD: ${{ secrets.BSKY_PASSWORD }}
         run: uv run lib.py
